refactoring and changed swagger documents
